2008-08-15  J. Tang  <jtang@tresys.com>

	* This is the official release of SETools 3.3.5.

	* Fixed errors in libapol's AV and TE rule rendering functions
	where errno was not being set properly.
	
	* Fixed error in apol_syn_avrule_render() where braces were not
	being added around the target set when there is exactly one target
	type and the keyword 'self'.  Thanks to Ryan Kagin for reporting
	this error.

2008-08-14  J. Tang  <jtang@tresys.com>

	* Synched libqpol to libsepol version 2.0.32, policy parser to
	2.0.16.

	* Synched libqpol to libsepol version 2.0.26, policy parser to
	2.0.14.

	* Added qpol_type_get_ispermissive().  SETools can now handle
	version 23 policy; bumped libqpol to version 1.4.

2008-03-07  J. Tang  <jtang@tresys.com>

	* This is the official release of SETools 3.3.4.

	* debian/control: Added transitional packages for libapol1,
	libseaudit1, libsefs1, and their associated development package.

	* packages/rpm/fc9-compile.diff: Added a patch to allow building
	of SETools on Fedora 9, due to possible buggy gcc/glibc-header
	interaction in libseaudit/swig/python.

2008-03-05  J. Tang  <jtang@tresys.com>

	* Fixes to libapol and libqpol to allow SETools to compile under
	gcc/g++ 4.3.

	* Added autodetection of Tk, needed for Tk 8.5.

	* Synced libqpol to policy parser to 2.0.13.

2008-02-29  J. Tang  <jtang@tresys.com>

	* Synced libqpol to libsepol version 2.0.23, policy parser to
	2.0.10.

2008-02-21  J. Tang  <jtang@tresys.com>

	* This is the official release of SETools 3.3.3.

	* Fixes to qpol_default_policy_find() to properly return policies
	whose versions are greater than the currently running system.

2008-02-19  J. Tang  <jtang@tresys.com>

	* Added QPOL_POLICY_OPTION_MATCH_SYSTEM as a policy load option to
	qpol_policy_open_from_file().  The tools seinfo, sesearch, and
	sechecker will now use this flag when loading the system's default
	policy.

	* Modified libqpol to understand version 22 policy.  Added